--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,7 +1,7 @@
 nav {
   width: 300px;
   position: fixed;
-  top: 20px;
+  top: 90px;
   left: 20px;
   padding: 30px;
   box-sizing: border-box;
@@ -12,7 +12,7 @@ nav:hover {
   opacity: 1;
   transition: all .1s ease;
 }
-nav p {
+nav > ul > li:first-child {
   margin: 0px;
   margin-top: 20px;
   font-weight: bold;
