--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,8 +1,5 @@
-article h1,article h2,article h3,article p,article ul,article ol, article q {
-  width: 700px; margin: 0 auto;
-}
-article h1, h2, h3, h4, h5, p, ul, li, q { width: 700px; margin: 0 auto;
-}
+article > * { width: 700px; margin: 0 auto;}
+
 article h1, h2, h3, h4, h5 { font-family: 'PT Sans Caption', sans-serif; font-weight: bold;
 }
 article h1 { margin-top: 67px; font-size: 38px; line-height: 45px;
