--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -17,6 +17,7 @@ article > p { font-size: 15px;
 article h1 + p{font-size: 17px; line-height: 24px;}
 article h1 {font-size: 24px;}
 article h2{font-size: 20px;margin-top: 30px;}
+article img + h2{ margin-top: 0;}
 article h3{font-size: 17px;margin-top: 30px; line-height: 24px;}
 article li{font-size: 15px;line-height: 24px;}
 article q{font-size: 15px; line-height: 24px;}
